--- a/sass/010-layout.scss
+++ b/sass/010-layout.scss
@@ -19,8 +19,8 @@ header {
   .feed {
     flex: 1;
     padding: 15px;
-    height: 250px;
     min-width: 250px;
+    height: 300px;
   }
 }
 
