--- a/sass/015-styles.scss
+++ b/sass/015-styles.scss
@@ -79,8 +79,12 @@ footer {
 }
 
 #map {
-  width: 80%;
-  height: 70px;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 160px;
+  border: solid 1px $footerColor;
+  overflow: hidden;
 }
 
 .our-location p {
